Added proper create view and details view for photos.
Index now displays a thumbnail as well, included _PhotoItem.cshtml partial view as well.

--- a/PhotoSharing/PhotoSharing.csproj
+++ b/PhotoSharing/PhotoSharing.csproj
@@ -323,6 +323,8 @@
     <Content Include="Views\Photo\Edit.cshtml" />
     <Content Include="Views\Photo\Delete.cshtml" />
     <Content Include="Views\Photo\EditAdmin.cshtml" />
+    <Content Include="Views\Photo\_PhotoItem.cshtml" />
+    <Content Include="Views\Photo\View1.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
