--- a/PhotoSharing/Web.config
+++ b/PhotoSharing/Web.config
@@ -30,7 +30,7 @@
     <add key="elmah.mvc.allowedRoles" value="*" />
     <add key="elmah.mvc.allowedUsers" value="*" />
     <add key="elmah.mvc.route" value="elmah" />
-  </appSettings>
+  <add key="RouteDebugger:Enabled" value="true" /></appSettings>
   <system.web>
     <customErrors mode="On" />
     <compilation debug="true" targetFramework="4.5" />
