--- a/PhotoSharing/packages.config
+++ b/PhotoSharing/packages.config
@@ -35,6 +35,7 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.5.3" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="4.5.6" targetFramework="net45" />
+  <package id="routedebugger" version="2.1.4.0" targetFramework="net45" />
   <package id="WebActivator" version="1.2.0.0" targetFramework="net45" />
   <package id="WebGrease" version="1.1.0" targetFramework="net45" />
 </packages>
