--- a/PhotoSharing/PhotoSharing.csproj
+++ b/PhotoSharing/PhotoSharing.csproj
@@ -60,6 +60,9 @@
       <HintPath>..\packages\Elmah.MVC.2.1.1\lib\net40\Elmah.Mvc.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="MvcCodeRouting">
+      <HintPath>..\packages\MvcCodeRouting.1.2.0\lib\net40\MvcCodeRouting.dll</HintPath>
+    </Reference>
     <Reference Include="RouteDebugger">
       <HintPath>..\packages\routedebugger.2.1.4.0\lib\net40\RouteDebugger.dll</HintPath>
     </Reference>
