--- a/PhotoSharing/PhotoSharing.csproj
+++ b/PhotoSharing/PhotoSharing.csproj
@@ -337,6 +337,7 @@
     <Content Include="Views\Photo\Delete.cshtml" />
     <Content Include="Views\Photo\EditAdmin.cshtml" />
     <Content Include="Views\Photo\_PhotoItem.cshtml" />
+    <Content Include="Views\Photo\Search.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
