--- a/PhotoSharing/Web.config
+++ b/PhotoSharing/Web.config
@@ -32,6 +32,13 @@
     <add key="elmah.mvc.route" value="elmah" />
   <add key="RouteDebugger:Enabled" value="false" /></appSettings>
   <system.web>
+    <caching>
+      <outputCacheSettings>
+        <outputCacheProfiles>
+          <add name="Images" duration="60" location="Any"/>
+        </outputCacheProfiles>
+      </outputCacheSettings>
+    </caching>
     <customErrors mode="On" />
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
