--- a/PhotoSharing/packages.config
+++ b/PhotoSharing/packages.config
@@ -14,6 +14,7 @@
   <package id="Elmah.MVC" version="2.1.1" targetFramework="net45" />
   <package id="elmah.xml" version="1.2" targetFramework="net45" />
   <package id="EntityFramework" version="5.0.0" targetFramework="net45" />
+  <package id="ImageProcessor" version="2.0.1.0" targetFramework="net45" />
   <package id="jQuery" version="1.7.1.1" targetFramework="net45" />
   <package id="jQuery.UI.Combined" version="1.8.20.1" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.9.0.1" targetFramework="net45" />
